syntax = "proto3";

package pb;

import "rpc_signup_user.proto";
import "user.proto";
option go_package = "github.com/TranQuocToan1996/redislearn/pb";


service AuthService {
  rpc SignUpUser(SignUpUserInput) returns (GenericResponse) {}
  rpc VerifyEmail(VerifyEmailRequest) returns (GenericResponse) {}
}

message VerifyEmailRequest { string verificationCode = 1; }
